<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Travigator</string>
    <string name="action_settings">Settings</string>
    <string name="DirName">Favorites</string>

    <string name="chooseFav">Choose route from your Favorites: </string>
    <string name="chooseNet">Choose route from our Servers: </string>

    <string name="selectCity">Please select a city</string>
    <string name="selectRoute">Please select a route</string>
    <string name="selectStop">Please select stop</string>
    <string name="cityFirst">Please select city first</string>
    <string name="routeFirst">Please select route first</string>

    <string name="Loading">Loading...</string>
    <string name="loadingCity">Please wait...\nLoading cities...</string>
    <string name="loadingRoute">Please wait...\nLoading routes...</string>
    <string name="loadingStop">Please wait...\nLoading stops...</string>
    <string name="loadingData">Please wait...\nLoading route data...</string>
    <string name="addingFav">Please wait...\nAdding to Favorites...</string>

    <string name="emptyIP">IP Address can\'t be empty!</string>

    <string name="button_stop">Stop</string>
    <string name="button_navigate">Navigate</string>
    <string name="button_view">View Route</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_addFav">Add route to\n Favorites</string>
    <string name="button_chooseFav">Choose from\n Favorites</string>
    <string name="button_remFav">Remove</string>
    <string name="button_chooseNet">Choose from\n Net</string>
    <string name="button_speechOff">Turn Off Speech</string>
    <string name="button_speechOn">Turn On Speech</string>
    <string name="button_speakAgain">Speak Again!</string>

    <string name="loc_unav">Location Unavailable! Please turn on Location Services</string>
    <string name="loc_av">Your current location is: </string>
    <string name="loc_acc">Your location is accurate to: </string>
    <string name="searchLoc">Fetching location...</string>

    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="gps_unav">GPS Unavailable! Please come out in the open</string>
    <string name="gps_temp_unav">GPS Temporarily Unavailable! Please Wait</string>
    <string name="gps_av">GPS Now Available</string>

    <string name="thisStop">This Stop is: </string>
    <string name="nextStop">Next Stop is: </string>
    <string name="lastStop">This is the last stop</string>

    <string name="parentKey">com.frodo.travigate.PARENT_KEY</string>
    <string name="selectSrcStop">Select Source Stop</string>
    <string name="google_api_key">AIzaSyDWG1FdZv4f-4Fbvx8SqY15BoXRi9aiswU</string>

</resources>

