<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <ListView
        android:id="@+id/showRoute"

       android:layout_height="wrap_content"
        android:layout_width="match_parent"
	android:layout_weight="1" />


    <TextView android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="visible" />

    <TextView android:id="@+id/coord"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:text="@string/searchLoc"
	android:layout_weight="1"
	android:gravity="center"
	android:visibility="visible" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_gravity="center_horizontal" >	

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_speakAgain"
	    android:textSize="25sp"
	    android:onClick="speakAgain" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop"
	    android:textSize="25sp"
	    android:onClick="Exit" />
	
    </LinearLayout> 

</LinearLayout>